--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,19 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <finalName>nio-node</finalName>
+                    <archive>
+                        <manifest>
+                            <mainClass>dm.nio.nodes.Runner</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
